add stars, css format

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Harmattan:wght@400;700&family=Roboto:wght@100;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Book 'n Goals</title>
@@ -19,17 +20,23 @@
             </nav>
         </div>
     </header>
-    <main class="main">
-        
+    <main class="main">    
         <button id="add-btn" class="add-btn btn">Add New Book</button>
         <div id="grid" class="main-grid"></div>
     </main>
     <div id="modal" class="">
-        <form class="pop-up container">
-            <input id="title" type="text" placeholder="Title">
-            <input id="author" type="text" placeholder="Author">
-            <input id="country" type="text" placeholder="Country">
-            <button id="submit-book-btn" class="btn" type="submit"> Enter </button>
+        <form id="formContainer" class="pop-up container" >
+            <button id="closeBtn" class="btn"> X</button>
+            <input id="title" type="text" placeholder="Title" minlength="10" required />
+            <input id="author" type="text" placeholder="Author" >
+            <div class="stars-grid">
+                <span class="material-symbols-outlined stars">star</span>
+                <span class="material-symbols-outlined stars">star</span>
+                <span class="material-symbols-outlined stars">star</span>
+                <span class="material-symbols-outlined stars">star</span>
+                <span class="material-symbols-outlined stars">star</span>
+            </div>
+            <button id="enterBtn" class="enterBtn btn" type="submit"> Enter </button>
         </form>
     </div>
 </body>
