--- a/index.html
+++ b/index.html
@@ -24,18 +24,11 @@
         <button id="add-btn" class="add-btn btn">Add New Book</button>
         <div id="grid" class="main-grid"></div>
     </main>
-    <div id="modal" class="">
-        <form id="formContainer" class="pop-up container" >
+    <div id="modal">
+        <form id="formContainer" class="pop-up container" onsubmit="addToBookLibrary()" >
             <button id="closeBtn" class="btn"> X</button>
             <input id="title" type="text" placeholder="Title" minlength="10" required />
-            <input id="author" type="text" placeholder="Author" >
-            <div class="stars-grid">
-                <span class="material-symbols-outlined stars">star</span>
-                <span class="material-symbols-outlined stars">star</span>
-                <span class="material-symbols-outlined stars">star</span>
-                <span class="material-symbols-outlined stars">star</span>
-                <span class="material-symbols-outlined stars">star</span>
-            </div>
+            <input id="author" type="text" placeholder="Author" required />
             <button id="enterBtn" class="enterBtn btn" type="submit"> Enter </button>
         </form>
     </div>
