--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
         </div>
     </header>
     <main class="main">    
-        <button id="add-btn" class="add-btn btn">Add New Book</button>
-        <div id="grid" class="main-grid"></div>
+        <button id="addNewBookBtn" class="add-btn btn">Add New Book</button>
+        <div id="grid" class="main-grid">
+            <!-- grid -->
+        </div>
     </main>
-    <div id="modal">
-        <form id="formContainer" class="pop-up container">
-            <button id="closeBtn" class="btn"> X</button>
-            <input id="title" type="text" placeholder="Title" minlength="10" required />
-            <input id="author" type="text" placeholder="Author" required />
+    <div id="modal" class="modal">
+        <form id="addBookForm" class="pop-up container">
+            <H3>Add New Book</H3>
+            <input id="title" type="text" placeholder="Title" minlength="1" required />
+            <input id="author" type="text" placeholder="Author"  />
+            <div class="modal_isRead">
+                <label for="isRead">Is Read?</label>
+                <input type="checkbox" name="isRead" id="isRead">
+            </div>
             <button id="enterBtn" class="enterBtn btn" type="submit"> Enter </button>
         </form>
     </div>
+    <div class="overlay"></div>
 </body>
 <script src="index.js"></script>
 </html>
