--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form id="addBookForm" class="pop-up container">
             <H3>Add New Book</H3>
             <input id="title" type="text" placeholder="Title" minlength="1" required />
-            <input id="author" type="text" placeholder="Author"  />
+            <input id="author" type="text" placeholder="Author" minlength="1" required/>
             <div class="modal_isRead">
                 <label for="isRead">Is Read?</label>
                 <input type="checkbox" name="isRead" id="isRead">
